<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/diary_entry"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:background="@color/white"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imgtv_informative_entry_symbol"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/diary_seizure_symbol"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/seizuretype_unknown" />

    <TextView
        android:id="@+id/imgtv_informative_entry_title_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/imgtv_informative_entry_symbol"
        android:contentDescription="@string/ns_seizure"
        android:text="@string/ns_seizure"
        android:textAlignment="viewStart"
        android:textColor="@color/blue_metallic"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/imgtv_informative_entry_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgtv_informative_entry_title_title"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@+id/imgtv_informative_entry_symbol"
        android:text="@string/ns_time"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="12sp" />

</RelativeLayout>