<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".users.UserOverview">

        <Button
            android:id="@+id/add_user_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_bg_round"
            android:contentDescription="@string/create_user"
            android:onClick="addUser"
            android:text="+"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:textScaleX="1.0"
            android:textSize="36dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="+" />

        <ListView
            android:id="@+id/user_list_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:padding="4dp"
            android:background="@drawable/listview_bg_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_user_button">

        </ListView>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/user_overview_no_user_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/semi_background"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/light_violet"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:contentDescription="@string/no_user"

                    android:text="@string/no_user"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    tools:text="@string/no_user" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="64dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/user_overview_no_user_later"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg_cancel"
                    android:contentDescription="@string/bt_later"
                    android:text="@string/bt_later"
                    android:textAllCaps="false"
                    tools:text="@string/bt_later" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/user_overview_no_user_create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg_save"
                    android:contentDescription="@string/bt_create"
                    android:text="@string/bt_create"
                    android:textAllCaps="false"
                    tools:text="@string/bt_create" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>